--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">App Asian Cuisine</string>
+    <string-array name="ampm_array">
+        <item>AM</item>
+        <item>PM</item>
+    </string-array>
 </resources>
